# ai-factory

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  STARTUP.md  STARTUP.txt  agent_worker.py  agent_worker_old.py  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  schemas.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
agents/: AGENT_CONFIGS.md  HERMES.md  PAVARD.md  SCITHERON.md  architect.md  developer.md  orchestrator.md  qa.md  system_context.md
alembic/: env.py
alembic/versions/: 001_initial.py
factory-api/app/: main.py  schemas.py
infra/: DOCKER.md  docker-compose.yml
neon-city/: CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
neon-city/alembic/: env.py
neon-city/scripts/: replay_cli.py  seed.py
neon-city/src/: config.py  main.py
neon-city/src/agents/: __init__.py  base.py  citizen.py  corporation.py  hacker.py  police.py
neon-city/src/api/: app.py  schemas.py
neon-city/src/api/routes/: agents.py  economy.py  replay.py  simulation.py
neon-city/src/economy/: __init__.py  currency.py  market.py  transactions.py
neon-city/src/engine/: __init__.py  grid.py  replay.py  tick.py  world.py
neon-city/src/events/: __init__.py  bus.py  generators.py  types.py
neon-city/src/logging/: __init__.py  analytics.py  structured.py
neon-city/src/neon_city/: __init__.py
neon-city/src/neon_city/agents/: __init__.py
neon-city/src/neon_city/api/: __init__.py
neon-city/src/neon_city/common/: models.py
neon-city/src/neon_city/economy/: __init__.py
neon-city/src/neon_city/engine/: __init__.py
neon-city/src/neon_city/events/: __init__.py
neon-city/src/neon_city/persistence/: __init__.py
neon-city/src/neon_city/worker/: __init__.py
neon-city/src/persistence/: __init__.py  models.py  repository.py  session.py
neon-city/src/worker/: scheduler.py
neon-city/tests/: conftest.py
neon-city/tests/test_agents/: test_citizen.py  test_corporation.py  test_hacker.py  test_police.py
neon-city/tests/test_api/: test_routes.py
neon-city/tests/test_economy/: test_currency.py  test_market.py
neon-city/tests/test_engine/: test_grid.py  test_tick.py  test_world.py
neon-city/tests/test_events/: test_bus.py  test_generators.py
neon-city/tests/test_persistence/: test_repository.py
neon-city/tests/test_replay/: test_replay.py
neon-city/tests/test_worker/: test_scheduler.py
scripts/: check-db.py  init-db.py
skills/: HERMES_SETUP.md  SKILL_DEFINITIONS.md
src/persistence/: models.py
